# Sudoku-project

./: CMakeLists.txt  Exceptions.c  Exceptions.h  Game.c  Game.h  GameAux.c  GameAux.h  IO.rar  List.c  List.h  MainAux.c  MainAux.h  Parser.c  Parser.h  Solver.c  Solver.h  main.c  makefile  n  partners.txt  stack.c  stack.h  test3.txt
IO/IO/test_inputs/: EditSetValueFixed  GenerateBoardFailed  GenerateInSolve  MarkErrorEdit  MarkErrorInit  MarkErrorSolveErrorousValues  MarkErrorSolveToggel  SolveAutoFill  SolveHint  SolveHintLastValueCorrrect  SolveNumSolutions  SolveResetGenerate  SolveResetSetGameComplete  SolveSave  SolveSetLastValueCorrrect  SolveSetLastValueError  SolveSetLastValueUndo  SolveSetValueErrorValues  UndoSet  UndoSetGameComplete  UndoSetRedo  UndoSetRedoBrokenChain  ValidateBoard  ValidateBoardErrorous  editAutoFill  editBlankLines  editHint  editNotFound  editOpen  editResetGenerate  editResetSetGameComplete  editSave  editSavebadPath  printBoardInit  solveNotFound  solvePrintBoard  solveWithError  solveWithMarkErrorDisabled  solveWithMarkErrorDisabledEnabled  test3
IO/IO/test_outputs/EditSetValueFixed_inReg/: option1  option3
IO/IO/test_outputs/EditSetValueFixed_inSolve/: option1  option3
IO/IO/test_outputs/EditSetValueFixed_inUsolveable/: option1  option3
IO/IO/test_outputs/EditSetValueFixed_inWitherros/: option1  option3
IO/IO/test_outputs/GenerateBoardFailed_inEmpty/: option3  option83
IO/IO/test_outputs/GenerateBoardFailed_inReg/: option3  option6
IO/IO/test_outputs/GenerateBoardFailed_inSolveNearSolve/: option6  option79
(+451 files in other folders)
